--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "// If You want to install mdbreact from our GitLab repository, please replace '5.1.0' with gitURL provided here ->": "git+https://oauth2:<YOUR-TOKEN-GOES-HERE>@git.mdbootstrap.com/mdb/react/re-pro.git",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "mdbreact": "5.1.0",
-    "react-scripts": "4.0.1",
-    "react-router-dom": "^5.1.2"
+    "mongoose": "^6.0.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "main": "nodemon server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "rename": "renamer --find App-clear.js --replace App.js ./src/App-clear.js && renamer --find style.css --replace index.css ./src/style.css ",
     "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename"
   },
   "devDependencies": {
+    "nodemon": "^2.0.12",
     "renamer": "^1.0.0",
     "rimraf": "^2.6.2"
   },
