--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "// If You want to install mdbreact from our GitLab repository, please replace '5.1.0' with gitURL provided here ->": "git+https://oauth2:<YOUR-TOKEN-GOES-HERE>@git.mdbootstrap.com/mdb/react/re-pro.git",
   "dependencies": {
     "mdbreact": "5.1.0",
+    "react-dropzone": "^11.3.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.1"
   },
